static/css/setup.css
/* Import Google font - Poppins */
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Poppins', sans-serif;
}

.container {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    max-width: 75%;
    max-height: 50%;
    width: 100%;
    background: #fff;
    border-radius: 7px;
    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
}

.container {
    padding: 2rem;
}

h1 {
    font-size: 5rem;
    font-weight: 500;
    text-align: center;
    margin-bottom: 1.5rem;
}

.form input:focus {
    box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2);
}

.form a {
    font-size: 16px;
    color: #1f1f1f;
    text-decoration: none;
}

.form a:hover {
    text-decoration: underline;
}

.button {
    color: #fff;
    background: #1f1f1f;

    width: 80%;
    height: 80px;

    margin-left: 10%;
    margin-right: 10%;
    border-radius: 7px;

    font-size: 2rem;
    font-weight: 500;
    letter-spacing: 1px;
    margin-top: .5rem;
    cursor: pointer;
    transition: 0.4s;
}

.form input.button:hover {
    background: #000000;
}

.signup {
    font-size: 17px;
    text-align: center;
}

.signup label {
    color: #1f1f1f;
    cursor: pointer;
}

.signup label:hover {
    text-decoration: underline;
}

.wksp-image-block {
    display: flex;
    justify-content: center;
}

.set-up-form {
    display: flex;
    flex-direction: column;
    align-content: center;
    justify-content: center;
    width: 100%;
    height: 100%;
    gap: 1.2rem;

}

.set-up {
    width: 100%;
    padding: 2rem;

}


.titleform {
    width: 600px;
    height: 100px;
    padding: 0 15px;
    font-size: 35px;
    margin-bottom: 1.3rem;
    border: 1px solid #ddd;
    border-radius: 6px;
    outline: none;
}

.cviform {
    display: none;
}

.cviform-label {
    /*display: inline-block;*/
    /*background-color: #1f3156;*/
    color: black;
    padding: 10px 20px;
    border: none;
    cursor: pointer; /* Cursor changes to indicate clickable */
    border-radius: 10px;
    font-size: 35px; /* Text size */
    text-align: center; /* Center text */
    height: 50px;
    width: 250px;
}

.input-container {
    height: 50%;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center; /* Centers horizontally if needed */
    gap: 1.2rem;
}

